# medarchive

./: .gitignore  README.md  docker-compose.yml  pipeline_optimization_task.md  render.yaml
.agents/: mcp.json
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  clear_remote_db.py  pyproject.toml  run_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: a676e68ed96f_initial_schema.py
backend/app/: __init__.py  cli.py  config.py  db.py  main.py  models.py  schemas.py  storage.py  worker.py
backend/app/api/: __init__.py  admin.py  partners.py  review.py  search.py  services.py  unmatched.py
backend/app/extractors/: __init__.py  base.py  docling_extractor.py  docx.py  llm.py  pdf_scan.py  pdf_text.py  router.py  xlsx.py
backend/app/matching/: __init__.py  catalog.py  embed_service.py  embeddings.py  fuzzy.py  llm_normalize.py  pgvector_match.py
backend/app/pipeline/: __init__.py  autocreate.py  fx.py  ingest.py  normalize.py  runner.py  validate.py
backend/data/samples/: catalog.json  Клиника_Альфа_2025-01-15.xlsx  Клиника_Бета_2025-02-01.docx
backend/medarchive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: make_samples.py
backend/tests/: conftest.py  test_docling_extractor.py  test_embed_service.py  test_parsing.py  test_pipeline_e2e.py  test_review_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  main.tsx  types.ts
frontend/src/components/: DashboardView.tsx  Layout.tsx  PartnersView.tsx  ReportsView.tsx  SearchView.tsx  VerifyView.tsx  ui.tsx
frontend/src/components/magicui/: MagicCard.tsx  NumberTicker.tsx  Particles.tsx  ShimmerButton.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  (+2 more)
