[project]
name = "medarchive"
version = "0.1.0"
description = "MedArchive — обработка архива прайс-листов клиник-партнёров (Кейс 2, MedPartners)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    # извлечение
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pdf2image>=1.17",
    "pytesseract>=0.3.10",
    "pillow>=10.2",
    # нормализация
    "rapidfuzz>=3.6",
    "sentence-transformers>=2.6",
    "numpy>=1.26",
    # pgvector: хранение векторов справочника в Postgres + поиск оператором <=>
    "pgvector>=0.3",
    # LLM-извлечение (fallback + vision-OCR) через HF Inference Providers.
    # openai SDK используется как OpenAI-совместимый клиент с кастомным base_url.
    "openai>=1.40",
    # HTTP-клиент (нужен для удалённого docling-serve и HF Inference Providers)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]
# Локальный docling-фоллбэк (тяжёлый: torch + ~1ГБ моделей). Не нужен, если
# используется удалённый docling-serve (MEDARCHIVE_DOCLING_SERVE_URL).
# Установка: pip install -e ".[docling]"
docling = [
    "docling>=2.107",
]

[project.scripts]
medarchive = "app.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
